Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16535

ExtractIconEx wrongly returns -1 for empty EXE file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.14
    • Shell
    • None

    Description

      This is a test program: Extract2.zip.

      Extract2-WinXP.png << CORRECT.
      Extract2-Win2k3.png << CORRECT.
      Extract2-Win10.png << CORRECT.
      Extract2-ReactOS.png << WRONG!

      Attachments

        1. Extract2.zip
          27 kB
        2. Extract2-ReactOS.png
          Extract2-ReactOS.png
          27 kB
        3. Extract2-Win10.png
          Extract2-Win10.png
          5 kB
        4. Extract2-Win2k3.png
          Extract2-Win2k3.png
          22 kB
        5. Extract2-WinXP.png
          Extract2-WinXP.png
          46 kB

        Activity

          People

            Fraizeraust George Bișoc
            katayama_hirofumi_mz Katayama Hirofumi MZ
            Votes:
            3 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: